@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST fastercsv-1.5.3.gem 124928 RMD160 5eb7f53e5688aeb5d2141dbeac764b594edb43e4 SHA1 8dccebb07a881c4d5c381c29c148a19a4d023a8a SHA256 0342c1d22c161cc749985c55d5988fab727ca69d6d83ab21176369ec675fb26d
 DIST fastercsv-1.5.4.gem 125440 RMD160 97c934ec5c0165b81b688ce4c1a4c59e89935b93 SHA1 7b04d8dfd8ac37355ea1eeee32ccb0d57435f8fc SHA256 11d84c899762234dff4ff67cf9c3fb467542afb5f7a184ef465b5964b987b100
+DIST fastercsv-1.5.5.gem 117248 RMD160 865cbcf024d5cc42b2199eb07c91124eeb42b1ce SHA1 a94bf8e8d669f38c20af1bbed4a181443a1011b3 SHA256 d098199e62e4e10eec436a9ea9b8c189dacd5c06f2825f00d1e0f1c29fdbc3b5
 EBUILD fastercsv-1.5.3.ebuild 863 RMD160 e8204c01ba2e029c9bd0d684654d707e943e5bf7 SHA1 86d5e7853988b1c745a433c9b64a3d22845387eb SHA256 f8aebe4521386163e1ae960cccc1525e7f62d944c1ef9a4c839dec6dc4deb35c
 EBUILD fastercsv-1.5.4.ebuild 791 RMD160 d3b18780fe43d305371e8a4aab84b18329a2ae8c SHA1 ff54817be3bbe318ac5504f3786bc31265fa7229 SHA256 55fce22bd2cc3500cdbbf701f4df32aee726b397e6eafe5634876f43ce707434
-MISC ChangeLog 2076 RMD160 80ddb23fee54185b2c6d57f4ac86f5adb3164a92 SHA1 6212e3bbd365bc64947e9b60425eef46056c9f1a SHA256 a9b7a22764eedb3f289fba5090a6542981eb1a96e450662d8277ccfc450fb62e
+EBUILD fastercsv-1.5.5.ebuild 800 RMD160 44df74848f5c8e35954b146378d03b73306c305a SHA1 bf2c2200368315dbdec4aced19f31042a0807fce SHA256 df3eb88cfbb8e27e816a16df835772034a02f609222076b6af74a7320f61186f
+MISC ChangeLog 2200 RMD160 0662b4495128a04728fca06a10e8217c64b674f4 SHA1 61ed343aff58a7a6d3f3d5397a2cc55aa9c3d996 SHA256 581c51d3fd4a4d7c2c012258dc5dc9902deb7575424d11b05c316beda444a612
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk0v/VYACgkQrnu0mw69JkrURwD+M58RGD4LfSPOKfOCGJdDBdiX
-WQxEKYU07rTXDeOCBCoA/2A5O+QPDlDNYPUBM2brCBjNkqiszXP6Ddb06FYOICyQ
-=Y9nP
+iF4EAREIAAYFAk/gAZoACgkQiIP6VqMIqNcQiQD/bVC89PYXod9CnnGPkAzONbjA
+uIesjwN7waxiD8bsuPoA/3l3//8jQj//iWgbpIUldnCNtz5f45pJ23zA5FB9iiqF
+=KTnp
 -----END PGP SIGNATURE-----
